Actualización: arreglé estilos y corregí script

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <!-- Columna izquierda para la imagen del evento -->
                 <div class="col-12 col-md-6 mb-4 mb-md-0">
                     <img src="/assets/imagenes/ecursion_juntos.jpg" class="img-fluid event-image" alt="Juntos"
-                        loading="lazy" data-bs-toggle="modal" data-bs-target="#imageModal"
+                        data-bs-toggle="modal" data-bs-target="#imageModal"
                         data-bs-src="/assets/imagenes/ecursion_juntos.jpg">
                 </div>
                 <!-- Columna derecha para el texto del evento -->
@@ -69,7 +69,7 @@
                 <!-- Columna derecha para la imagen del evento -->
                 <div class="col-12 col-md-6 mb-4 mb-md-0 order-md-2 order-1">
                     <img src="/assets/imagenes/PrimerTeAmo.jpg" class="img-fluid event-image" alt="Unico te amo"
-                        loading="lazy" data-bs-toggle="modal" data-bs-target="#imageModal"
+                        data-bs-toggle="modal" data-bs-target="#imageModal"
                         data-bs-src="/assets/imagenes/PrimerTeAmo.jpg">
                 </div>
             </div>
@@ -78,7 +78,7 @@
                 <!-- Columna izquierda para la imagen del evento -->
                 <div class="col-12 col-md-6 mb-4 mb-md-0">
                     <img src="/assets/imagenes/yaNoEstabas.jpg" class="img-fluid event-image" alt="Sin ti"
-                        loading="lazy" data-bs-toggle="modal" data-bs-target="#imageModal"
+                        data-bs-toggle="modal" data-bs-target="#imageModal"
                         data-bs-src="/assets/imagenes/yaNoEstabas.jpg">
                 </div>
                 <!-- Columna derecha para el texto del evento -->
@@ -104,7 +104,7 @@
                 </div>
                 <!-- Columna derecha para la imagen del evento -->
                 <div class="col-12 col-md-6 mb-4 mb-md-0 order-md-2 order-1">
-                    <img src="/assets/imagenes/carta.png" class="img-fluid event-image" alt="Carta" loading="lazy"
+                    <img src="/assets/imagenes/carta.png" class="img-fluid event-image" alt="Carta"
                         data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-src="/assets/imagenes/carta.png">
                 </div>
             </div>
@@ -112,7 +112,7 @@
             <div class="row justify-content-center align-items-center mb-5">
                 <!-- Columna izquierda para la imagen del evento -->
                 <div class="col-12 col-md-6 mb-4 mb-md-0">
-                    <img src="/assets/imagenes/pandemia.jpg" class="img-fluid event-image" alt="Pandemia" loading="lazy"
+                    <img src="/assets/imagenes/pandemia.jpg" class="img-fluid event-image" alt="Pandemia"
                         data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-src="/assets/imagenes/pandemia.jpg">
                 </div>
                 <!-- Columna derecha para el texto del evento -->
@@ -136,7 +136,7 @@
                 <!-- Columna derecha para la imagen del evento -->
                 <div class="col-12 col-md-6 mb-4 mb-md-0 order-md-2 order-1">
                     <img src="/assets/imagenes/base.jpg" class="img-fluid event-image" alt="Base" data-bs-toggle="modal"
-                        loading="lazy" data-bs-target="#imageModal" data-bs-src="/assets/imagenes/base.jpg">
+                        data-bs-target="#imageModal" data-bs-src="/assets/imagenes/base.jpg">
                 </div>
             </div>
 
@@ -144,7 +144,7 @@
                 <!-- Columna izquierda para la imagen del evento -->
                 <div class="col-12 col-md-6 mb-4 mb-md-0">
                     <img src="/assets/imagenes/reencuentro.jpg" class="img-fluid event-image" alt="reencuentro"
-                        loading="lazy" data-bs-toggle="modal" data-bs-target="#imageModal"
+                        data-bs-toggle="modal" data-bs-target="#imageModal"
                         data-bs-src="/assets/imagenes/reencuentro.jpg">
                 </div>
                 <!-- Columna derecha para el texto del evento -->
@@ -171,7 +171,7 @@
                 <!-- Columna derecha para la imagen del evento -->
                 <div class="col-12 col-md-6 mb-4 mb-md-0 order-md-2 order-1">
                     <img src="/assets/imagenes/dia_hermoso.jpg" class="img-fluid event-image" alt="Dia Hermoso"
-                        loading="lazy" data-bs-toggle="modal" data-bs-target="#imageModal"
+                        data-bs-toggle="modal" data-bs-target="#imageModal"
                         data-bs-src="/assets/imagenes/dia_hermoso.jpg">
                 </div>
             </div>
@@ -179,7 +179,7 @@
             <div class="row justify-content-center align-items-center mb-5">
                 <!-- Columna izquierda para la imagen del evento -->
                 <div class="col-12 col-md-6 mb-4 mb-md-0">
-                    <img src="/assets/imagenes/pizza_1.jpg" class="img-fluid event-image" alt="pizza_1" loading="lazy"
+                    <img src="/assets/imagenes/pizza_1.jpg" class="img-fluid event-image" alt="pizza_1"
                         data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-src="/assets/imagenes/pizza_1.jpg">
                 </div>
                 <!-- Columna derecha para el texto del evento -->
@@ -204,7 +204,7 @@
                 <!-- Columna derecha para la imagen del evento -->
                 <div class="col-12 col-md-6 mb-4 mb-md-0 order-md-2 order-1">
                     <img src="/assets/imagenes/hamburguesa.jpg" class="img-fluid event-image" alt="hamburguesa"
-                        loading="lazy" data-bs-toggle="modal" data-bs-target="#imageModal"
+                        data-bs-toggle="modal" data-bs-target="#imageModal"
                         data-bs-src="/assets/imagenes/hamburguesa.jpg">
                 </div>
             </div>
@@ -213,7 +213,7 @@
                 <!-- Columna izquierda para la imagen del evento -->
                 <div class="col-12 col-md-6 mb-4 mb-md-0">
                     <img src="/assets/imagenes/trasnochada.jpg" class="img-fluid event-image" alt="trasnochada"
-                        loading="lazy" data-bs-toggle="modal" data-bs-target="#imageModal"
+                        data-bs-toggle="modal" data-bs-target="#imageModal"
                         data-bs-src="/assets/imagenes/trasnochada.jpg">
                 </div>
                 <!-- Columna derecha para el texto del evento -->
@@ -237,7 +237,7 @@
                 <!-- Columna derecha para la imagen del evento -->
                 <div class="col-12 col-md-6 mb-4 mb-md-0 order-md-2 order-1">
                     <img src="/assets/imagenes/pizza_actual.jpg" class="img-fluid event-image" alt="pizza_actual"
-                        loading="lazy" data-bs-toggle="modal" data-bs-target="#imageModal"
+                        data-bs-toggle="modal" data-bs-target="#imageModal"
                         data-bs-src="/assets/imagenes/pizza_actual.jpg">
                 </div>
             </div>
@@ -284,28 +284,28 @@
                     <div class="row g-3">
                         <!-- Galería de imágenes del año 2017 -->
                         <div class="col-6 col-md-3">
-                            <img src="/assets/imagenes/2017/20170517_131948.jpg" class="img-fluid gallery-image"
-                                loading="lazy" alt="Imagen 1" data-bs-toggle="modal" data-bs-target="#imageModal"
+                            <img src="/assets/imagenes/2017/20170517_131948.jpg" class="img-fluid gallery-image"loading="lazy"
+                                alt="Imagen 1" data-bs-toggle="modal" data-bs-target="#imageModal"
                                 data-bs-src="/assets/imagenes/2017/20170517_131948.jpg">
                         </div>
                         <div class="col-6 col-md-3">
-                            <img src="assets/imagenes/2017/20170517_1319480.jpg" class="img-fluid gallery-image"
-                                loading="lazy" alt="Imagen 2" data-bs-toggle="modal" data-bs-target="#imageModal"
+                            <img src="assets/imagenes/2017/20170517_1319480.jpg" class="img-fluid gallery-image"loading="lazy"
+                                alt="Imagen 2" data-bs-toggle="modal" data-bs-target="#imageModal"
                                 data-bs-src="assets/imagenes/2017/20170517_1319480.jpg">
                         </div>
                         <div class="col-6 col-md-3">
-                            <img src="assets/imagenes/2017/20170517_181145.jpg" class="img-fluid gallery-image"
-                                loading="lazy" alt="Imagen 3" data-bs-toggle="modal" data-bs-target="#imageModal"
+                            <img src="assets/imagenes/2017/20170517_181145.jpg" class="img-fluid gallery-image"loading="lazy"
+                                alt="Imagen 3" data-bs-toggle="modal" data-bs-target="#imageModal"
                                 data-bs-src="assets/imagenes/2017/20170517_181145.jpg">
                         </div>
                         <div class="col-6 col-md-3">
-                            <img src="assets/imagenes/2017/20170517_181222.jpg" class="img-fluid gallery-image"
-                                loading="lazy" alt="Imagen 4" data-bs-toggle="modal" data-bs-target="#imageModal"
+                            <img src="assets/imagenes/2017/20170517_181222.jpg" class="img-fluid gallery-image"loading="lazy"
+                                alt="Imagen 4" data-bs-toggle="modal" data-bs-target="#imageModal"
                                 data-bs-src="/assets/imagenes/2017/20170517_181222.jpg">
                         </div>
                         <div class="col-6 col-md-3">
-                            <img src="assets/imagenes/2017/20170517_181358.jpg" class="img-fluid gallery-image"
-                                loading="lazy" alt="Imagen 5" data-bs-toggle="modal" data-bs-target="#imageModal"
+                            <img src="assets/imagenes/2017/20170517_181358.jpg" class="img-fluid gallery-image"loading="lazy"
+                                alt="Imagen 5" data-bs-toggle="modal" data-bs-target="#imageModal"
                                 data-bs-src="assets/imagenes/2017/20170517_181358.jpg">
                         </div>
                     </div>
